navbar fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,10 @@ body.border-dark .menu-btn > .lines > span{
 	transition:width .6s cubic-bezier(.785,.135,.15,.86);
 	overflow:hidden;
 }
-.menu:hover,
+/* .menu:hover,
 .menu-btn:hover + .menu{
-	width:300px;
-}
+	width: 300px;
+} */
 .menu > .inner{
 	height:100%;
 	width:300px;
